Correcting appearance of timer page action buttons on mobile, so that they dont stack. Resolves #5.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -268,6 +268,7 @@ div.central {
     height: 65px;
     width: 240px;
     margin: 0 2px 0 2px;
+    max-width: calc(50% - 4px);
 }
 
 /* Stats Page */
